--- a/outline.html
+++ b/outline.html
@@ -88,51 +88,51 @@ body {
   </div> 
 </div>
 
-<h1 style="font-family:helvetica;"><ins> Unit 1- Beginning in Computer Science</ins></h1>
-<p>This is where you learn the basics of Python, a programming envrironment!<br>Every student starts by learning this basic command:<pre>     • print <br>Then, you will learn the language of computers, BINARY :) </pre></p>
+<h1 style="font-family:helvetica;text-align: center;"><ins> Unit 1- Beginning in Computer Science</ins></h1>
+<p style="text-align:center;">This is where you learn the basics of Python, a programming envrironment!<br>Every student starts by learning this basic command:<pre style="text-align:center;">     • print <br>Then, you will learn the language of computers, BINARY :) </pre></p>
 
-<h1 style="font-family:helvetica;text-align: right;"> <ins> Unit 2- Number Calculations and Data</ins></h1>
-<pre style="text-align:right;"> Unit 2 has more coding that will allow you to perform math functions: <br>    •modular division <br>    •sqrt<br> Then, you will learn to make a random number generator! </pre>
+<h1 style="font-family:helvetica;text-align: center;"> <ins> Unit 2- Number Calculations and Data</ins></h1>
+<pre style="text-align:center;"> Unit 2 has more coding that will allow you to perform math functions: <br>    •modular division <br>    •sqrt<br> Then, you will learn to make a random number generator! </pre>
 
-<h1 style="font-family:helvetica;"> <ins>Unit 3- Making Decisions</ins></h1>
+<h1 style="font-family:helvetica;text-align:center;"> <ins>Unit 3- Making Decisions</ins></h1>
 
-<pre> This unit teaches more functions: <br>     •Max <br>     •Min <br>     • and IF statements  😍 <br>Then for a big project, we will code a program to play <a href="https://py3.codeskulptor.org/#user307_R0nLI9eZU4IGsaU.py" target="_blank">Rock Paper Scissors</a></pre>
+<pre style="text-align:center;"> This unit teaches more functions: <br>     •Max <br>     •Min <br>     • and IF statements  😍 <br>Then for a big project, we will code a program to play <a href="https://py3.codeskulptor.org/#user307_R0nLI9eZU4IGsaU.py" target="_blank">Rock Paper Scissors</a></pre>
 
-<h1 style="font-family:helvetica;text-align: right;"> <ins> Unit 4-Repition and Loops</ins> </h1>
+<h1 style="font-family:helvetica;text-align: center;"> <ins> Unit 4-Repition and Loops</ins> </h1>
 
-<pre style="text-align:right;"> This unit is awesome and makes your code EFFICIENT with #loops 😍 😍 😍<br>     •loops will be essential for making large projects</pre>
+<pre style="text-align:center;"> This unit is awesome and makes your code EFFICIENT with #loops 😍 😍 😍<br>     •loops will be essential for making large projects</pre>
 
-<h1 style="font-family:helvetica;"> <ins> Unit 5- Earsketch</ins></h1>
+<h1 style="font-family:helvetica;text-align:center;"> <ins> Unit 5- Earsketch</ins></h1>
 
-<pre> This is by far the BEST unit. You will: <br>    •make code into songs <br>    •make a ringtone <br><br> Here are some ringtone samples:<br>     •<a href="https://earsketch.gatech.edu/earsketch2/?sharing=iqzW7vJZUWxry_ElvJb-Cg" target="_blank">Sample 1 - Dan Clark</a><br>    •<a href="https://earsketch.gatech.edu/earsketch2/?sharing=Xs89FkSQm2k9N9YGKhUYxQ" target="_blank">Sample 2- Zach Smith</a></pre>
+<pre style="text-align:center;"> This is by far the BEST unit. You will: <br>    •make code into songs <br>    •make a ringtone <br><br> Here are some ringtone samples:<br>     •<a href="https://earsketch.gatech.edu/earsketch2/?sharing=iqzW7vJZUWxry_ElvJb-Cg" target="_blank">Sample 1 - Dan Clark</a><br>    •<a href="https://earsketch.gatech.edu/earsketch2/?sharing=Xs89FkSQm2k9N9YGKhUYxQ" target="_blank">Sample 2- Zach Smith</a></pre>
 
-<h1  style="font-family:helvetica;"> <ins></ins></h1>
+<h1  style="font-family:helvetica;text-align:center;"> <ins></ins></h1>
   
-<h1 style = "text-align: right;" ><ins>Unit 6 - "Graphics"</ins></h1>
+<h1 style = "text-align: center;" ><ins>Unit 6 - "Graphics"</ins></h1>
 
-<p style= "text-align: right;"> -Learning how to code colors <br> -Flashing colors and words <br>-Coordinating points using x and y coordanates <br> -Drawing shapes and lines<br>-Creating images using lines and polygons <br> -Filling in shapes wth colors <br> -Animations - moving shapes across frame<br>
+<p style= "text-align: center;"> -Learning how to code colors <br> -Flashing colors and words <br>-Coordinating points using x and y coordanates <br> -Drawing shapes and lines<br>-Creating images using lines and polygons <br> -Filling in shapes wth colors <br> -Animations - moving shapes across frame<br>
 
   <a href="https://py3.codeskulptor.org/#user307_d0ALGIAwwReAKe7.py" target="_blank">House Animation<br> </a>
 
   <a href="https://py3.codeskulptor.org/#user307_BuhXfXYYmRynxtO.py" target="_blank">Football Animation</a>
 </p>
 
-<h1 style = "text-align: left;"><ins>Unit 7 - "Funtions" </ins></h1>
+<h1 style = "text-align: center;"><ins>Unit 7 - "Funtions" </ins></h1>
 
-<p style=  "text-align:left;"> -Defining and calling funtions <br> -Using loops to repeat funtions <br>-Learning to add perameters <br>-Funtions to compute numbers  <br> -Funtions to ask questions and input answers <br> -Traceing Code <br> -Calender to compute number of days <br> <a href="https://py3.codeskulptor.org/#user307_NJJwZjI3K0YBUsX.py" target="_blank">Lesson 7.5 Code</a>  </p>
+<p style=  "text-align: center;"> -Defining and calling funtions <br> -Using loops to repeat funtions <br>-Learning to add perameters <br>-Funtions to compute numbers  <br> -Funtions to ask questions and input answers <br> -Traceing Code <br> -Calender to compute number of days <br> <a href="https://py3.codeskulptor.org/#user307_NJJwZjI3K0YBUsX.py" target="_blank">Lesson 7.5 Code</a>  </p>
 
-<h1 style = "text-align:right;"><ins>Unit 8 - "Arrays" </ins></h1>
+<h1 style = "text-align:center;"><ins>Unit 8 - "Arrays" </ins></h1>
 
-<p style = "text-align:right;"> -Creating lists <br> -Declaring arrays using "append" <br> -Using loops to create lists <br> -Diffrent ways to arrange and sort data</p>
+<p style = "text-align:center;"> -Creating lists <br> -Declaring arrays using "append" <br> -Using loops to create lists <br> -Diffrent ways to arrange and sort data</p>
 
-<h1 style = "text-align: left;"><ins>Unit 9 - "2D Arrays"</ins> </h1>
-<p style ="text-align: left">-Creating arrays using rows and columns on a grid <br>-Using color to fill in grids and creat pictures <br> -Creating a moving picture by changing the colors  </p>
+<h1 style = "text-align: center;"><ins>Unit 9 - "2D Arrays"</ins> </h1>
+<p style ="text-align: center">-Creating arrays using rows and columns on a grid <br>-Using color to fill in grids and creat pictures <br> -Creating a moving picture by changing the colors  </p>
 
-<h1 style = "text-align:right;"><ins>Unit 10 - Programming in EarSketch </ins></h1>
-<p style = "text-align:right;">-Creating more music<br>-Became more experienced in the program<br>-Creating a "song of the summer" <br> -Working with other people and creating a much better song <br> <a href="https://earsketch.gatech.edu/earsketch2/?sharing=6F2m4Xt7r40D-noS9Vv1UA" target="_blank">Mo song of the summer<br> <a href="https://earsketch.gatech.edu/earsketch2/?sharing=bmBodBo1WHwOFtH_D19vaw" target="_blank">Chloe song of the summer</a></a></p>
+<h1 style = "text-align:center;"><ins>Unit 10 - Programming in EarSketch </ins></h1>
+<p style = "text-align:center;">-Creating more music<br>-Became more experienced in the program<br>-Creating a "song of the summer" <br> -Working with other people and creating a much better song <br> <a href="https://earsketch.gatech.edu/earsketch2/?sharing=6F2m4Xt7r40D-noS9Vv1UA" target="_blank">Mo song of the summer<br> <a href="https://earsketch.gatech.edu/earsketch2/?sharing=bmBodBo1WHwOFtH_D19vaw" target="_blank">Chloe song of the summer</a></a></p>
 
-<h1 style = "text-align: left;"><ins>Unit 11 - Internet </ins></h1>
-<p style = "text-align: left;"> -Understanding what the internet is and its componets<br>-learnign HTML format so we are able to create this website! <br>-Creating headings, paraghrahs<br>-Using diffrent styles on the sentances <br> -Adding pictures and links</p>
+<h1 style = "text-align: center;"><ins>Unit 11 - Internet </ins></h1>
+<p style = "text-align: center;"> -Understanding what the internet is and its componets<br>-learnign HTML format so we are able to create this website! <br>-Creating headings, paraghrahs<br>-Using diffrent styles on the sentances <br> -Adding pictures and links</p>
 
 </body>
 </html>
